--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+### Hi there 👋
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
-
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
-
-You can edit the `index.html` file to change this content.
+I’m Amro. I am a student at the African Masters of Machine Intelligence [AMMI](https://aimsammi.org/). I will be happy if you reach me out at [Twitter](https://twitter.com/amrokamal1997) or [LinkedIn](https://www.linkedin.com/in/amro-kamal-161721162/).
 
 # Posts
