--- a/index.html
+++ b/index.html
@@ -67,13 +67,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><h3 id="hi-there-">Hi there 👋</h3>
 
-<p><img src="/amro/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
-
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
+<p>I’m Amro. I am a student at the African Masters of Machine Intelligence <a href="https://aimsammi.org/">AMMI</a>. I will be happy if you reach me out at <a href="https://twitter.com/amrokamal1997">Twitter</a> or <a href="https://www.linkedin.com/in/amro-kamal-161721162/">LinkedIn</a>.</p>
 
 <h1 id="posts">Posts</h1>
 
