--- a/about/index.html
+++ b/about/index.html
@@ -96,6 +96,15 @@ window.onload = wrap_img;
   <li><em>Aug 2019</em>: I attened Deep Learning Indaba 2019 in Nairobi, Kenya.</li>
 </ul>
 
+<h2 id="my-medium-blogs">My Medium Blogs:</h2>
+<ul>
+  <li><a href="https://amrokamal-47691.medium.com/residual-blocks-resnets-6817090ff61a">Resiual Blocks and ResNets.</a></li>
+  <li><a href="https://amrokamal-47691.medium.com/yolo-yolov2-and-yolov3-all-you-want-to-know-7e3e92dc48990">YOLO, YOLOv2 and YOLOv3: All You want to know.</a></li>
+</ul>
+
+<h2 id="contacts">Contacts</h2>
+<p><a href="afagiri@aimsammi.org">Email</a> , <a href="https://www.linkedin.com/in/amro-kamal-161721162/">LinkedIn</a> , <a href="https://twitter.com/amrokamal1997">Twitter</a></p>
+
 <!-- This website is powered by **[fastpages](https://github.com/fastai/fastpages)** [^1]. -->
 <!-- [^1]:a blogging platform that natively supports Jupyter notebooks in addition to other formats. -->
 
