--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@ image: images/logo.png
 
 ### Hi there 👋
 
-I’m Amro. I am a student at the African Masters of Machine Intelligence [AMMI](https://aimsammi.org/). I will be happy if you reach me out at [Twitter](https://twitter.com/amrokamal1997) or [LinkedIn](https://www.linkedin.com/in/amro-kamal-161721162/).
+
+I Amro, a student at the [African Master's in Machine Intelligence (AMMI)](https://aimsammi.org/), a one-year program organized by the [African Institute For Mathematical Sciences (AIMS)](https://nexteinstein.org/). I will be happy if you reach me out at [Twitter](https://twitter.com/amrokamal1997) or [LinkedIn](https://www.linkedin.com/in/amro-kamal-161721162/). Feel free to send me email [here](afagiri@aimsammi.org)
+
+
+Welcome to my website, see what I am doing:
+- *Sep 2021*: I started my MSc project with Dr. Stephane Deny from Facebook AI reseach.  
+
+- *Sep 2021*: I started a [project](https://omdena.com/projects/wood-fire/) at [OmdenaAI](https://omdena.com/) as a junior ML engineer.
+
+- *Jan 2021*: I moved to Senegal to start the African Master's in Machine Intelligence (AMMI).  
+ 
+- *Oct 2020*: I completed my BSc at University of Khartoum / Electrical Engineering (minor in software engineering). Now I am an Engineer 😄. 
+
+- *Sep 2019*: I presented a session "Intro to Deep Learning" at Deep Learning IndabaX Sudan. 
+
+- *Aug 2019*: I attened Deep Learning Indaba 2019 in Nairobi, Kenya. 
 
 # Posts
