--- a/index.html
+++ b/index.html
@@ -69,7 +69,29 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><h3 id="hi-there-">Hi there 👋</h3>
 
-<p>I’m Amro. I am a student at the African Masters of Machine Intelligence <a href="https://aimsammi.org/">AMMI</a>. I will be happy if you reach me out at <a href="https://twitter.com/amrokamal1997">Twitter</a> or <a href="https://www.linkedin.com/in/amro-kamal-161721162/">LinkedIn</a>.</p>
+<p>I Amro, a student at the <a href="https://aimsammi.org/">African Master’s in Machine Intelligence (AMMI)</a>, a one-year program organized by the <a href="https://nexteinstein.org/">African Institute For Mathematical Sciences (AIMS)</a>. I will be happy if you reach me out at <a href="https://twitter.com/amrokamal1997">Twitter</a> or <a href="https://www.linkedin.com/in/amro-kamal-161721162/">LinkedIn</a>. Feel free to send me email <a href="afagiri@aimsammi.org">here</a></p>
+
+<p>Welcome to my website, see what I am doing:</p>
+<ul>
+  <li>
+    <p><em>Sep 2021</em>: I started my MSc project with Dr. Stephane Deny from Facebook AI reseach.</p>
+  </li>
+  <li>
+    <p><em>Sep 2021</em>: I started a <a href="https://omdena.com/projects/wood-fire/">project</a> at <a href="https://omdena.com/">OmdenaAI</a> as a junior ML engineer.</p>
+  </li>
+  <li>
+    <p><em>Jan 2021</em>: I moved to Senegal to start the African Master’s in Machine Intelligence (AMMI).</p>
+  </li>
+  <li>
+    <p><em>Oct 2020</em>: I completed my BSc at University of Khartoum / Electrical Engineering (minor in software engineering). Now I am an Engineer 😄.</p>
+  </li>
+  <li>
+    <p><em>Sep 2019</em>: I presented a session “Intro to Deep Learning” at Deep Learning IndabaX Sudan.</p>
+  </li>
+  <li>
+    <p><em>Aug 2019</em>: I attened Deep Learning Indaba 2019 in Nairobi, Kenya.</p>
+  </li>
+</ul>
 
 <h1 id="posts">Posts</h1>
 
