--- a/about/index.html
+++ b/about/index.html
@@ -83,13 +83,13 @@ window.onload = wrap_img;
     <p><em>Sep 2021</em>: I started my MSc project with Dr. Stephane Deny from Facebook AI reseach.</p>
   </li>
   <li>
-    <p><em>Sep 2021</em>: I started a <a href="https://omdena.com/projects/wood-fire/">project</a> at <a href="https://omdena.com/">OmdenaAI</a> as a junior ML engineer.</p>
+    <p><em>Sep 2021</em>: I started working on this <a href="https://omdena.com/projects/wood-fire/">project</a> at <a href="https://omdena.com/">Omdena</a> as a junior ML engineer.</p>
   </li>
   <li>
     <p><em>Jan 2021</em>: I moved to Senegal to start the African Master’s in Machine Intelligence (AMMI).</p>
   </li>
   <li>
-    <p><em>Oct 2020</em>: I completed my BSc at University of Khartoum / Electrical Engineering (minor in software engineering). Now I am an Engineer 😄.</p>
+    <p><em>Oct 2020</em>: I completed my BSc at University of Khartoum / Electrical Engineering (major in software engineering). Now I am an Engineer 😄.</p>
   </li>
   <li>
     <p><em>Sep 2019</em>: I presented a session “Intro to Deep Learning” at Deep Learning IndabaX Sudan.</p>
