--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@ image: images/logo.png
 ### Hi there 👋
 
 
-I Amro, a student at the [African Master's in Machine Intelligence (AMMI)](https://aimsammi.org/), a one-year program organized by the [African Institute For Mathematical Sciences (AIMS)](https://nexteinstein.org/). I will be happy if you reach me out at [Twitter](https://twitter.com/amrokamal1997) or [LinkedIn](https://www.linkedin.com/in/amro-kamal-161721162/). Feel free to send me email [here](afagiri@aimsammi.org)
+I Amro, a student at the [African Master's in Machine Intelligence (AMMI)](https://aimsammi.org/), a one-year program organized by the [ ](https://nexteinstein.org/). I will be happy if you reach me out at [Twitter](https://twitter.com/amrokamal1997) or [LinkedIn](https://www.linkedin.com/in/amro-kamal-161721162/). Feel free to send me email [here](afagiri@aimsammi.org)
 
 
 Welcome to my website, see what I am doing:
+- *Jan 2022*: I am a Teaching Assistant at the African Institute For Mathematical Sciences (AIMS).  
+
 - *Sep 2021*: I started my MSc project with Dr. Stephane Deny from Facebook AI reseach.  
 
 - *Sep 2021*: I started a [project](https://omdena.com/projects/wood-fire/) at [OmdenaAI](https://omdena.com/) as a junior ML engineer.
