--- a/index.html
+++ b/index.html
@@ -69,10 +69,13 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><h3 id="hi-there-">Hi there 👋</h3>
 
-<p>I Amro, a student at the <a href="https://aimsammi.org/">African Master’s in Machine Intelligence (AMMI)</a>, a one-year program organized by the <a href="https://nexteinstein.org/">African Institute For Mathematical Sciences (AIMS)</a>. I will be happy if you reach me out at <a href="https://twitter.com/amrokamal1997">Twitter</a> or <a href="https://www.linkedin.com/in/amro-kamal-161721162/">LinkedIn</a>. Feel free to send me email <a href="afagiri@aimsammi.org">here</a></p>
+<p>I Amro, a student at the <a href="https://aimsammi.org/">African Master’s in Machine Intelligence (AMMI)</a>, a one-year program organized by the <a href="https://nexteinstein.org/"> </a>. I will be happy if you reach me out at <a href="https://twitter.com/amrokamal1997">Twitter</a> or <a href="https://www.linkedin.com/in/amro-kamal-161721162/">LinkedIn</a>. Feel free to send me email <a href="afagiri@aimsammi.org">here</a></p>
 
 <p>Welcome to my website, see what I am doing:</p>
 <ul>
+  <li>
+    <p><em>Jan 2022</em>: I am a Teaching Assistant at the African Institute For Mathematical Sciences (AIMS).</p>
+  </li>
   <li>
     <p><em>Sep 2021</em>: I started my MSc project with Dr. Stephane Deny from Facebook AI reseach.</p>
   </li>
@@ -142,7 +145,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/amro-kamal" title="amro-kamal"><svg class="svg-icon grey"><use xlink:href="/amro/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/amrokamal1997" title="amrokamal1997"><svg class="svg-icon grey"><use xlink:href="/amro/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/amro-kamal" target="_blank" title="amro-kamal"><svg class="svg-icon grey"><use xlink:href="/amro/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/amrokamal1997" target="_blank" title="amrokamal1997"><svg class="svg-icon grey"><use xlink:href="/amro/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
 </div>
 
   </div>
