--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ AAAI 2023<br />
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/mitchell_small.jpg"><img style="width:75%;max-width:75%" alt="profile photo" src="images/mitchell_small.jpg" class="hoverZoomLink"></a>
+              <a href="images/amro2.jpg"><img style="width:75%;max-width:75%" alt="profile photo" src="images/mitchell_small.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
