--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ window.onload = wrap_img;
 <p>Welcome to my website, see what I am doing:</p>
 <ul>
   <li>
+    <p><em>Jan 2022</em>: I am an AI Resident at Meta AI (FAIR).</p>
+  </li>
+  <li>
     <p><em>Jan 2022</em>: I am a Teaching Assistant at the African Institute For Mathematical Sciences (AIMS).</p>
   </li>
   <li>
