--- a/index.html
+++ b/index.html
@@ -67,9 +67,6 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h3 id="hi-there-">Hi there 👋</h3>
-
-<p>I Amro, a student at the <a href="https://aimsammi.org/">African Master’s in Machine Intelligence (AMMI)</a>, a one-year program organized by the <a href="https://nexteinstein.org/"> </a>. I will be happy if you reach me out at <a href="https://twitter.com/amrokamal1997">Twitter</a> or <a href="https://www.linkedin.com/in/amro-kamal-161721162/">LinkedIn</a>. Feel free to send me email <a href="afagiri@aimsammi.org">here</a></p>
 
 <p>Welcome to my website, see what I am doing:</p>
 <ul>
@@ -112,14 +109,17 @@ window.onload = wrap_img;
               <p>I am a PhD student at the <a href="https://www.cs.washington.edu/">University of Washington</a>, advised by <a href="https://homes.cs.washington.edu/~ali/">Ali Farhadi</a> and <a href="https://people.csail.mit.edu/ludwigs/">Ludwig Schmidt</a>.
                 I am broadly interested in large scale machine learning, and have been fortunate to be a part of the <a href="https://arxiv.org/abs/2203.05482">model soups</a> and <a href="https://github.com/mlfoundations/open_clip">OpenCLIP</a> projects.
               </p>
+	      <div class="home"><h3 id="hi-there-">Hi there 👋</h3>
+              <p>I Amro, a student at the <a href="https://aimsammi.org/">African Master’s in Machine Intelligence (AMMI)</a>, a one-year program organized by the <a href="https://nexteinstein.org/"> </a>. I will be happy if you reach me out at <a href="https://twitter.com/amrokamal1997">Twitter</a> or <a href="https://www.linkedin.com/in/amro-kamal-161721162/">LinkedIn</a>. Feel free to send me email <a href="afagiri@aimsammi.org">here</a></p>
+ 
               <p style="text-align:center">
-                <a href="mailto:mitchnw@cs.washington.edu">Email</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?user=fzRnjFgAAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://twitter.com/mitchnw">Twitter</a>
+                <a href="mailto:amrokamal30@gmail.com">Email</a> &nbsp/&nbsp
+                <a href="https://scholar.google.com/citations?user=n_4bGsYAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
+                <a href="https://twitter.com/amrokamal1997">Twitter</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/amro1.jpg"><img style="width:75%;max-width:75%" alt="profile photo" src="images/mitchell_small.jpg" class="hoverZoomLink"></a>
+              <a href="images/amro1.jpg"><img style="width:75%;max-width:75%" alt="profile photo" src="images/amro1.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
