--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 <meta property="og:site_name" content="Amro Kamal Mohamed Abbas" />
 <meta property="og:image" content="https://amro-kamal.github.io/amro/images/logo.png" />
 <script type="application/ld+json">
-{"url":"https://amro-kamal.github.io/amro/","@type":"WebSite","headline":"Amro Kamal Mohamed Abbas","image":"https://amro-kamal.github.io/amro/images/logo.png","name":"Amro Kamal Mohamed Abbas","description":"An easy to use blogging platform with support for Jupyter Notebooks.","@context":"https://schema.org"}</script>
+{"url":"https://amro-kamal.github.io/amro/","@type":"WebSite","headline":"Amro Abbas","image":"https://amro-kamal.github.io/amro/images/logo.png","name":"Amro Abbas","description":"An easy to use blogging platform with support for Jupyter Notebooks.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/amro/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://amro-kamal.github.io/amro/feed.xml" title="Amro Kamal Mohamed Abbas" /><link rel="shortcut icon" type="image/x-icon" href="/amro/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 
 <script>
 function wrap_img(fn) {
@@ -88,7 +89,7 @@ window.onload = wrap_img;
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/amro1.JPG"><img style="width:75%;max-width:75%" alt="profile photo" src="images/amro1.JPG" class="hoverZoomLink"></a>
+              <a href="images/amro1.JPG"><img style="width:75%;max-width:75% border-radius: 5px;" alt="profile photo" src="images/amro1.JPG" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
