--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ window.onload = wrap_img;
             <td style="padding:2.5%;width:63%;vertical-align:middle">
       
 	      <div class="home"><h3 id="hi-there-">Hi there 👋</h3>
-              <p>I am an AI Resident at Meta AI (Fromaly Facebook AI). I have been luky enough to work with <a href="http://www.arimorcos.com">Ari S. Morcos</a> and 
-		      <a href="https://profiles.stanford.edu/surya-ganguli">Surya Gaguli</a>. Currenly I'm working on making large-scale training more "Efficient". I will be happy if you reach me out through one of these platforms: </p>.
+              <p>I am an AI Resident at Meta AI (Fromaly Facebook AI) working with <a href="http://www.arimorcos.com">Ari S. Morcos</a> and 
+		      <a href="https://profiles.stanford.edu/surya-ganguli">Surya Gaguli</a>. My current interest is making large-scale training more "Efficient". I will be happy if you reach me out through one of these platforms: </p>.
  
               <p style="text-align:center">
                 <a href="mailto:amrokamal30@gmail.com">Email</a> &nbsp/&nbsp
@@ -91,7 +91,7 @@ window.onload = wrap_img;
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/amro1.JPG"><img style="width:75%;max-width:75% border-radius: 15px;" alt="profile photo" src="images/amro1.JPG" class="hoverZoomLink"></a>
+              <a href="images/amro1.JPG"><img style="width:75%;max-width:75%" alt="profile photo" src="images/amro1.JPG" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
