--- a/search/index.html
+++ b/search/index.html
@@ -72,7 +72,7 @@ window.onload = wrap_img;
 
 <div class="search">
     <div class="search-input-wrap">
-    <input type="text" class="js-search-input search-input input-block form-control" tabindex="0" placeholder="Search Amro Kamal Mohamed Abbas" aria-label="Search Amro Kamal Mohamed Abbas" autocomplete="off">
+    <input type="text" class="js-search-input search-input input-block form-control" tabindex="0" placeholder="Type here to search in my profile" aria-label="Search Amro Kamal Mohamed Abbas" autocomplete="off">
     </div>
     <br>
     <div class="js-search-results search-results-wrap"></div>
