--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@ window.onload = wrap_img;
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
-      
+		    
 	      <div class="home"><h3 id="hi-there-">Hi there 👋</h3>
               <p>I am an AI Resident at Meta AI (Fromaly Facebook AI) working with <a href="http://www.arimorcos.com">Ari S. Morcos</a> and 
 		      <a href="https://profiles.stanford.edu/surya-ganguli">Surya Gaguli</a>. My current interest is making large-scale training more "Efficient". </br>
-		      Before that, I did the <a href="https://aimsammi.org/">African Master’s in Machine Intelligence (AMMI)</a>. I will be happy if you reach me out through one of these platforms: </p>.
-              <p style="text-align:center">
+		      Before that, I pursued the <a href="https://aimsammi.org/">African Master’s in Machine Intelligence (AMMI).</a>. My master's thesis was supervised by Prof. Stephane Deny from Meta AT/Aalto University. I will be happy if you reach me out through one of these platforms: </p>.
+              <p style="text-align:center"> 
                 <a href="mailto:amrokamal30@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=n_4bGsYAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/amrokamal1997">Twitter</a> &nbsp/&nbsp
