--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ window.onload = wrap_img;
 		    
 	      <div class="home"><h3 id="hi-there-">Hi there 👋</h3>
               <p>I am an AI Resident at Meta AI (Fromaly Facebook AI) working with <a href="http://www.arimorcos.com">Ari S. Morcos</a> and 
-		      <a href="https://profiles.stanford.edu/surya-ganguli">Surya Gaguli</a>. My current interest is making large-scale training more "Efficient". </br>
+		      <a href="https://profiles.stanford.edu/surya-ganguli">Surya Gaguli</a>. My current interest is making large-scale training more "Efficient" and understanding how the quality of pretraining data influences model performance. </br>
 		      Before that, I pursued the <a href="https://aimsammi.org/">African Master’s in Machine Intelligence (AMMI)</a>. My master's thesis on exploring Out-of-distribution robustness of SOTA vision models was supervised by Prof. <a href="https://sites.google.com/view/stephanedeny/home?pli=1">Stephane Deny</a> from Meta AI/Aalto University. I will be happy if you reach me out through one of these platforms: </p>.
               <p style="text-align:center"> 
                 <a href="mailto:amrokamal30@gmail.com">Email</a> &nbsp/&nbsp
