--- a/index.html
+++ b/index.html
@@ -136,16 +136,22 @@ window.onload = wrap_img;
               <br> (*indicates equal contribution)
 
 	<!-- Paper 0 -->
-    
-              <p>
-                <a https://arxiv.org>
-                  <papertitle>Effective Pruning of Web-Scale Datasets Based on Complexity of Concept Clusters</papertitle>
-                </a>
-                <br>
-                  Amro Abbas, Evgenia Rusak, Kushal Tirumala, Wieland Brendel, Kamalika Chaudhuri, Ari S. Morcos 
-                <br>
-                <em>ArXiv</em>, Oct 2023
-              </p>
+
+
+	    <div class="card">
+	    <img src="effective_pruning_main.png" alt="Image">
+	    <div class="card-content">
+	              <p>
+	                <a https://arxiv.org>
+	                  <papertitle>Effective Pruning of Web-Scale Datasets Based on Complexity of Concept Clusters</papertitle>
+	                </a>
+	                <be>
+	                  <strong>Amro Abbas</strong>*, Evgenia Rusak*, Kushal Tirumala, Wieland Brendel, Kamalika Chaudhuri, Ari S. Morcos 
+	                <br>
+	                <em>ArXiv</em>, Oct 2023
+	              </p>
+	    </div>
+	    </div>
 
 		    
 	<!-- Paper 1 -->
@@ -155,7 +161,7 @@ window.onload = wrap_img;
                   <papertitle>SIEVE: Multimodal Dataset Pruning Using Image Captioning Models</papertitle>
                 </a>
                 <br>
-                  Anas Mahmoud, Mostafa Elhoushi, Amro Abbas, Yu Yang, Newsha Ardalani, Hugh Leather, Ari Morcos
+                  Anas Mahmoud, Mostafa Elhoushi, <strong>Amro Abbas</strong>, Yu Yang, Newsha Ardalani, Hugh Leather, Ari Morcos
                 <br>
                 <em>ArXiv</em>, Oct 2023
               </p>
