--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@ window.onload = wrap_img;
           <tr onmouseout="end_user_stop()" onmouseover="end_user_start()">
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Publications &amp Preprints</heading>
-              <br> (*indicates equal contribution)
+              <br> (* indicates equal contribution)
 
 	<!-- Paper 0 -->
 
 
 	    <div class="card">
-	    <img src="effective_pruning_main.png" alt="Image">
+	    <img src="images/effective_pruning_main.png" alt="Image">
 	    <div class="card-content">
 	              <p>
 	                <a https://arxiv.org>
