--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ window.onload = wrap_img;
 	    <div class="card-content">
 	              <p>
 	                <a https://arxiv.org>
-	                  <papertitle>Effective Pruning of Web-Scale Datasets Based on Complexity of Concept Clusters</papertitle>
+	                  <p>Effective Pruning of Web-Scale Datasets Based on Complexity of Concept Clusters</p>
 	                </a>
 	                <be>
 	                  <strong>Amro Abbas</strong>*, Evgenia Rusak*, Kushal Tirumala, Wieland Brendel, Kamalika Chaudhuri, Ari S. Morcos 
