--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ window.onload = wrap_img;
 
 
 	    <div class="card">
-	    <img src="images/effective_pruning_main.png" alt="Image">
+	    <img src="images/effective_pruning_main.png" alt="Image" width=50px>
 	    <div class="card-content">
 	              <p>
 	                <a https://arxiv.org>
