--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@ window.onload = wrap_img;
 	<!-- Paper 0 -->
 
 
-	    <div class="card">
-	    <img src="images/effective_pruning_main.png" alt="Image" width=50px>
-	    <div class="card-content">
+	    <div class="card" style="display:flex;border:1px;solid;margin:20px;overflow:hidden;background-color:#fff">
+	    <img src="images/effective_pruning_main.png" alt="Image" style="width:150px;height:auto;object-fit:cover">
+	    <div class="card-content" style="padding:20px">
 	              <p>
 	                <a https://arxiv.org>
 	                  <p>Effective Pruning of Web-Scale Datasets Based on Complexity of Concept Clusters</p>
@@ -152,7 +152,6 @@ window.onload = wrap_img;
 	              </p>
 	    </div>
 	    </div>
-
 		    
 	<!-- Paper 1 -->
 		    
