--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ window.onload = wrap_img;
 
 	<!-- Paper 0 -->
 	    <div class="card" style="display:flex;border:1px;solid;margin:20px;overflow:hidden;background-color:#fff">
-	    <img src="images/effective_pruning_main.png" alt="Image" style="width:250px;height:auto;object-fit:cover">
+	    <img src="images/effective_pruning_main.png" alt="Image" style="display:block;width:250px;height:auto;object-fit:cover">
 	    <div class="card-content" style="padding:20px">
 	              <p>
 	                <a https://arxiv.org>
@@ -153,7 +153,7 @@ window.onload = wrap_img;
 		    
 	<!-- Paper 1 -->
 	    <div class="card" style="display:flex;border:1px;solid;margin:20px;overflow:hidden;background-color:#fff">
-	    <img src="images/seive_main.png" alt="Image" style="width:250px;height:auto;object-fit:cover">
+	    <img src="images/seive_main.png" alt="Image" style="display:block;width:250px;height:auto;object-fit:cover">
 	    <div class="card-content" style="padding:20px">    
               <p>
                 <a https://arxiv.org/abs/2310.02110>
@@ -169,7 +169,7 @@ window.onload = wrap_img;
 		    
           <!-- Paper 2 -->
 	    <div class="card" style="display:flex;border:1px;solid;margin:20px;overflow:hidden;background-color:#fff">
-	    <img src="images/semdedup_main.png" alt="Image" style="width:250px;height:auto;object-fit:cover">
+	    <img src="images/semdedup_main.png" alt="Image" style="display:block;width:250px;height:auto;object-fit:cover">
 	    <div class="card-content" style="padding:20px">    
               <p>
                 <a href="https://arxiv.org/abs/2303.09540">
@@ -190,7 +190,7 @@ window.onload = wrap_img;
 
            <!-- Paper 3 --> 
 	    <div class="card" style="display:flex;border:1px;solid;margin:20px;overflow:hidden;background-color:#fff">
-	    <img src="images/progress_main.pn" alt="Image" style="width:250px;height:auto;object-fit:cover">
+	    <img src="images/progress_main.png" alt="Image" style="display:block;width:250px;height:auto;object-fit:cover">
 	    <div class="card-content" style="padding:20px">   
 		<p>
                 <a href="https://arxiv.org/pdf/2207.08034v1.pdf">
