--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ window.onload = wrap_img;
 		    
           <!-- Paper 2 -->
 	    <div class="card" style="display:flex;border:1px;solid;margin:20px;overflow:hidden;background-color:#fff">
-	    <img src="images/semdedup_main.png" alt="Image" style="display:block;width:250px;height:auto;object-fit:cover">
+	    <img src="images/semdedup_main.png" alt="Image" style="display:cover;width:250px;height:auto;object-fit:cover">
 	    <div class="card-content" style="padding:20px">    
               <p>
                 <a href="https://arxiv.org/abs/2303.09540">
