--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ window.onload = wrap_img;
 
            <!-- Paper 3 --> 
 	    <div class="card" style="display:flex;border:1px;solid;margin:20px;overflow:hidden;background-color:#fff">
-	    <img src="images/progress_main.png" alt="Image" style="object-fit:contain;cover:250px;height:auto;object-fit:cover">
+	    <img src="images/progress_main.png" alt="Image" style="object-fit:contain;width:250px;height:auto;object-fit:cover">
 	    <div class="card-content" style="padding:20px">   
 		<p>
                 <a href="https://arxiv.org/pdf/2207.08034v1.pdf">
