--- a/index.html
+++ b/index.html
@@ -193,10 +193,9 @@ window.onload = wrap_img;
 	    <div class="card-content" style="padding:20px">   
 		<p>
                 <a href="https://arxiv.org/pdf/2207.08034v1.pdf">
-                  <h2>Progress and limitations of deep networks to recognize objects in unusual poses</h2>
+                  <papertitle>Progress and limitations of deep networks to recognize objects in unusual poses</papertitle>
                 </a>
                 <br>
-                  
                   <strong>Amro Abbas</strong>,
                   <a href="https://sites.google.com/view/stephanedeny/home">Stephane Deny</a>,
                 <em>AAAI2023</em>, Nov 2022
