--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ window.onload = wrap_img;
 
 <!-- ######################INTODUCTION INTODUCTION INTODUCTION INTODUCTION######################### -->
 
-  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+  <table style="font-family:Courier New,monospace;width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr style="padding:0px">
       <td style="padding:0px">
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
