--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ image: images/logo.png
 
 Wellcome to my website!.
 
-
-I am an AI Resident at [Meta AI](https://ai.facebook.com) working with [Ari Morcos](http://www.arimorcos.com). Before that, I was a masters' student at the [African Institute For Mathematical Sciences (AIMS)](https://nexteinstein.org/) where I did the [African Master's in Machine Intelligence (AMMI)](https://aimsammi.org/). Feel free to send me email [here](afagiri@aimsammi.org).
+I am an AI researcher at [DatologAI](https://www.datologyai.com/). At DatologAI, we work on making training of DL models more efficient through focusing on understanding data properties that make models learn better and faster.
+In 2023, I was an AI Resident at [Meta AI](https://ai.facebook.com) (Facebook AI) working with [Ari Morcos](http://www.arimorcos.com). Before that, I was a masters' student at the [African Institute For Mathematical Sciences (AIMS)](https://nexteinstein.org/) where I did the [African Master's in Machine Intelligence (AMMI)](https://aimsammi.org/). Feel free to send me email [here](afagiri@aimsammi.org).
 
 
 ## News:
